# instant-bots-backend

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 000f115274a6_added_avatar_and_removed_unwanted_.py  31d25b1aa04d_user_model_changed.py  321806b45339_made_the_id_field_to_be_set_by_default_.py  4d9c875cfffd_added_name_to_chat.py  4db000a80063_changed_the_sender_field.py  581ced9c902d_restarted_revisions.py  6270a3991fb7_added_type_field_to_the_bot_model.py  668c26b0f006_initial_migration.py  8637a6651fb3_changed_field_in_chat_model.py  949575792bb1_added_visibility_field_to_bbots.py  b9b6caaf2fbc_initialized_the_tables.py  df08206d575a_updating_the_dev_branch.py  f5bb639dcae9_changed_field_in_bot.py
src/: __init__.py
src/components/: ai_suite_client.py  llm.py
src/constants/: prompts.py  prompts_dict.py
src/core/: config.py
src/db/: database.py
src/models/: chat_models.py  models.py  utils.py
src/routers/: bot_router.py  chat_router.py  payment_router.py  router.py  user_router.py  utils.py
src/schemas/: bot_schema.py  chat_schema.py  user_schema.py
src/webhooks/: clerk_webhooks.py
