[project]
name = "final-year-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aisuite>=0.1.11",
    "alembic>=1.15.2",
    "docstring-parser>=0.16",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "stripe>=12.2.0",
    "svix>=1.65.0",
    "uvicorn>=0.34.2",
]
